@@ -37,6 +37,7 @@ t/2.t
 t/3.t
 t/4.t
 t/5.t
+t/6.t
 t/7.t
 t/8.t
 t/9.t
