@@ -1,3 +1,14 @@
+2003/12/02 18:30 (-0500) muppetman
+
+	* GType.xs: base_init support for perl-derived GObjects.  during
+	class initialization, invoke the method INIT_BASE in the object's
+	package if it exists.  see http://lists.gnome.org/archives/gtk-\
+	perl-list/2003-November/msg00194.html (and indeed the rest of that
+	thread) for discussion.
+
+	* t/6.t, MANIFEST: test the base_init stuff by ensuring multiple
+	derivation works as expected.
+
 2003/12/02 18:26 (-0500) muppetman
 
 	* GParamSpec.xs: stray code in a switch statement prevented the
